--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
+                <div class="col-md-4 col-xl-2">
+                    <a href="#reserveForm" class="btn btn-large btn-primary bg-info mt-4">Reserver Campsite</a>
+                </div>
             </div>
         </div>
     </header>
@@ -76,8 +79,14 @@
                 <h2 class="text-sm-right">Featured Campsites</h2>
             </div>
             <div class="col">
-                <h3>React Lake Campground</h3>
-                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                <div  class="media">
+                    
+                    <div class="media-body align-self-center">
+                        <h3>React Lake Campground</h3>
+                        <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                    </div>
+                    <img src="/img/img/react-lake-thumb.jpg" alt="" class="img-thumbnail d-flex ml-3">
+                </div>
             </div>
         </div>
     </div>
@@ -90,14 +99,51 @@
             <div class="col">
                 <div class="media">
                     <img src="/img/img/bootstrap-thumb.png" alt="Bootstrap outfitters" class="d-flex mr-3 img-thumbnail">
-                    <div class="media-body">
+                    <div class="media-body align-self-center">
                         <h3>Bootstrap Outfitters</h3>
                         <p class="d-none d-sm-block">Bootstrap Outfitters supplies you gear you need at prices you can't beat.</p>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="row row-content">
+            <div class="col-sm-6 mx-auto">
+                <div class="card">
+                    <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
+                    <div class="card-body">
+                        <form action="" id="reserveForm">
+                            <div class="row form-group">
+                                <label for="numCampers" class="col-sm-6 col-xs-12 col-form-label">Number of Campers</label>
+                                <div class="col col-xs-12">
+                                    <select name="numCampers" id="numCampers" class="form-control">
+                                        <option value="select">Select...</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <label for="date" class="col-sm-6 col-form-label">Date</label>
+                                <div class="col-sm-6">
+                                    <input type="date" id="date" name="date" placeholder="date" class="form-control">
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col">
+                                    <button type="submit" class="btn btn-primary">Search</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
 
     <footer class="site-footer">
         <div class="container">
