added javascript component - tab nav

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2">
-                    <a href="#reserveForm" class="btn btn-large btn-primary bg-info mt-4">Reserver Campsite</a>
+                    <a href="#reserveForm" class="btn btn-large btn-primary bg-info mt-4">Reserve Campsite</a>
                 </div>
             </div>
         </div>
