--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-4 col-sm-3 col-md-2 align-self-center">
-                    <a href="index.html"><img src="/img/img/logo.png" alt="" class="image-fluid"></a>
+                    <a href="index.html"><img src="img/logo.png" alt="" class="image-fluid"></a>
                 </div>
                 <div class="col">
                     <h1>NuCamp</h1>
@@ -40,7 +40,7 @@
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
             <a href="#" class="navbar-brand">
-                <img src="/img/img/logo.png" alt="" class="image-fluid" height="30" width="30">
+                <img src="img/logo.png" alt="" class="image-fluid" height="30" width="30">
             </a>
             <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -99,13 +99,57 @@
     </div>
 
     <div class="container">
+
+        <div class=" row row-content">
+            <div class="col-md-8 mx-auto">
+                <div id="homeCarousel" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#homeCarousel" data-slide-to="1"></li>
+                        <li data-target="#homeCarousel" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/breadcrumb-trail.jpg" alt="breadcrumb-trail" class="d-block w-100">
+                            <div class="carousel-caption">
+                                <h3>Breadcrumb Trail Campground</h3>
+                                <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/react-lake.jpg" alt="React-lake" class="d-block w-100">
+                            <div class="carousel-caption">
+                                <h3>React Lake Campground</h3>
+                                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/chrome-river.jpg" alt="chrome-river" class="d-block w-100">
+                            <div class="carousel-caption">
+                                <h3>Chorme River Campground</h3>
+                                <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy of old-growth firs at this enchanting stop by the Chrome River.</p>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#homeCarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#homeCarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3 order-sm-last">
                 <h2 class="text-sm-right">Discover & Review</h2>
             </div>
             <div class="col">
                 <div class="media">
-                    <img src="/img/img/breadcrumb-trail-thumb.jpg" alt="breadcrumb-trail-thumb" class="d-flex mr-3 image-thumbnail">
+                    <img src="img/breadcrumb-trail-thumb.jpg" alt="breadcrumb-trail-thumb" class="d-flex mr-3 image-thumbnail">
                     <div class="media-body align-self-center">
                         <h3>Our Campsites</h3>
                         <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
@@ -128,7 +172,7 @@
                         <h3>React Lake Campground</h3>
                         <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
                     </div>
-                    <img src="/img/img/react-lake-thumb.jpg" alt="" class="img-thumbnail d-flex ml-3">
+                    <img src="img/react-lake-thumb.jpg" alt="" class="img-thumbnail d-flex ml-3">
                 </div>
             </div>
         </div>
@@ -141,7 +185,7 @@
             </div>
             <div class="col">
                 <div class="media">
-                    <img src="/img/img/bootstrap-thumb.png" alt="Bootstrap outfitters" class="d-flex mr-3 img-thumbnail">
+                    <img src="img/bootstrap-thumb.png" alt="Bootstrap outfitters" class="d-flex mr-3 img-thumbnail">
                     <div class="media-body align-self-center">
                         <h3>Bootstrap Outfitters</h3>
                         <p class="d-none d-sm-block">Bootstrap Outfitters supplies you gear you need at prices you can't beat.</p>
