--- a/index.html
+++ b/index.html
@@ -30,12 +30,54 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2">
-                    <a href="#reserveForm" class="btn btn-large btn-primary bg-info mt-4" data-html="true" data-toggle="tooltip" 
-                    title="Or call us at <br> <strong>1-206-555-1234</strong> " data-placement="bottom">Reserve Campsite</a>
+                    <a class="btn btn-large btn-primary bg-info mt-4" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
                 </div>
             </div>
         </div>
     </header>
+
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" id="reserveModal">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header bg-info text-white">
+                <h3 class="modal-title ">Reserve a Campsite</h3>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="container-fluid">
+                    <form action="" id="reserveForm">
+                        <div class="row form-group">
+                            <label for="numCampers" class="col-sm-6 col-xs-12 col-form-label">Number of Campers</label>
+                            <div class="col col-xs-12">
+                                <select name="numCampers" id="numCampers" class="form-control">
+                                    <option value="select">Select...</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row form-group">
+                            <label for="date" class="col-sm-6 col-form-label">Date</label>
+                            <div class="col-sm-6">
+                                <input type="date" id="date" name="date" placeholder="date" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row form-group">
+                            <button type="button" class="btn btn-secondary ml-3" data-dismiss="modal">Cancel</button>
+                            <div class="col">
+                                <button type="submit" class="btn btn-primary">Search</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
     
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
@@ -193,42 +235,6 @@
                 </div>
             </div>
         </div>
-        <div class="row row-content">
-            <div class="col-sm-6 mx-auto">
-                <div class="card">
-                    <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
-                    <div class="card-body">
-                        <form action="" id="reserveForm">
-                            <div class="row form-group">
-                                <label for="numCampers" class="col-sm-6 col-xs-12 col-form-label">Number of Campers</label>
-                                <div class="col col-xs-12">
-                                    <select name="numCampers" id="numCampers" class="form-control">
-                                        <option value="select">Select...</option>
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="row form-group">
-                                <label for="date" class="col-sm-6 col-form-label">Date</label>
-                                <div class="col-sm-6">
-                                    <input type="date" id="date" name="date" placeholder="date" class="form-control">
-                                </div>
-                            </div>
-                            <div class="row form-group">
-                                <div class="col">
-                                    <button type="submit" class="btn btn-primary">Search</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 
 
@@ -266,11 +272,7 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     
 
-    <script>
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
-    </script>
+
 </body>
 
 </html>
