added jquery to activate modals and added a few styles to the modals

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2">
-                    <a class="btn btn-large btn-primary bg-info mt-4" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
+                    <a class="btn btn-large btn-primary bg-info mt-4" id="reserveButton">Reserve Campsite</a>
                 </div>
             </div>
         </div>
@@ -42,7 +42,7 @@
 
         <div class="modal-content">
 
-            <div class = "modal-header bg-info text-white" >
+            <div class = "modal-header" >
 
                 <h3>Reserve a Campsite</h3>
                 <button type = "button" class = "close" data-dismiss = "modal" > &times; </button>
@@ -145,7 +145,7 @@
                     <li class="nav-item"><a class="nav-link" href="/contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
                 <span class="navbar-text ml-auto">
-                    <a href="#" role="button" data-toggle="modal" data-target="#loginModal">
+                    <a href="#" role="button" id="loginButton">
                         <i class="fa fa-sign-in"></i> Login
                     </a>
                 </span>
@@ -237,7 +237,7 @@
                 </div>
             </div>
         </div>
-
+        
         <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3 order-sm-last">
                 <h2 class="text-sm-right">Discover & Review</h2>
